force-app/main/default/objects/Interview__c/fields/Handshake_Information__c.field-meta.xml
<CustomField>
    <fullName>Handshake_Information__c</fullName>
    <label>Handshake Information</label>
    <type>TextArea</type>
</CustomField>