force-app/main/default/objects/Interview__c/fields/Problems_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Problems_Discussed__c</fullName>
    <label>Problems Discussed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>